--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="header-container">
-	<h1 class="title">tingting's travels</h1>
+	<h1 class="title">christine's adventures</h1>
 	<img class="signature" src="signature.png" alt="signature">
 </div>
 <div class="img-container">
