--- a/index.html
+++ b/index.html
@@ -135,6 +135,20 @@
 		</div></div><div id="art" class="img-container" style="display:none"></div>
 		<div class="flip-card">
 			<div class="flipper">
+				<div class="front" id=2019_01_16_Apple.jpg>
+					<img class="main-image" src="art/2019_01_16_Apple.jpg">
+				</div>
+				<div class="back" id=2019_01_16_Apple.jpg>
+					<img class="main-image" src="art/2019_01_16_Apple.jpg">
+					<div class="back-description">
+						<h1>Apple</h1>
+						<h2>January 16, 2019</h2>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="flip-card">
+			<div class="flipper">
 				<div class="front" id=2019_01_09_Values.jpg>
 					<img class="main-image" src="art/2019_01_09_Values.jpg">
 				</div>
