--- a/template.html
+++ b/template.html
@@ -4,6 +4,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
     <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="tab.css"> 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="opentab.js"></script>  
 </head>
@@ -15,9 +16,7 @@
         <img class="signature" src="signature.png" alt="signature">    
     </div>
 
-    <div class="tabbar">
+    <div class="tab">
         <button onclick="openTab('travel')">travel</button>
         <button onclick="openTab('art')">art</button>
     </div>
-
-    <div id="travel" class="img-container">
