--- a/template.html
+++ b/template.html
@@ -17,6 +17,6 @@
     </div>
 
     <div class="tab">
-        <button onclick="openTab('travel')">travel</button>
-        <button onclick="openTab('art')">art</button>
+        <button class="tablink" onclick="openTab('travel', this)" style="border-bottom: 3px solid #333;">travel</button>
+        <button class="tablink" onclick="openTab('art', this)">art</button>
     </div>
