--- a/template.html
+++ b/template.html
@@ -19,4 +19,5 @@
     <div class="tab">
         <button class="tablink" onclick="openTab('travel', this)" style="border-bottom: 3px solid #333;">travel</button>
         <button class="tablink" onclick="openTab('art', this)">art</button>
+        <button class="tablink" onclick="openTab('food', this)">food</button>
     </div>
