Refactored code & reformatted images

--- a/template.html
+++ b/template.html
@@ -3,17 +3,18 @@
 
 <head>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> 
-    <link rel="stylesheet" href="tab.css"> 
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/image.css">  
+    <link rel="stylesheet" href="css/tab.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script src="opentab.js"></script>  
+    <script src="js/opentab.js"></script>  
 </head>
 
 <body>
     
     <div class="header-container">
         <h1 class="title">christine's adventures</h1>
-        <img class="signature" src="signature.png" alt="signature">    
+        <img class="signature" src="media/signature.png" alt="signature">    
     </div>
 
     <div class="tab">
